--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <source srcset="./images/service-desktop-001.webp 1x, ./images/service-desktop-@2x-001.webp 2x"
                                 media="(min-width: 1200px)" type="image/webp" >
                             <source srcset="./images/service-desktop-001.jpg 1x, ./images/service-desktop-@2x-001.jpg 2x"
-                                media="(min-width: 1200px)" >
+                                media="(min-width: 1200px)" type="image/jpg" >
                             <img src="./images/service-desktop-001.jpg" alt="робочі інструменти">
                         </picture>
                         <strong class="feature-list__signature">Десктопні додатки</strong>
@@ -197,15 +197,15 @@
                             <source srcset="./images/emloyer-desktop-001.webp 1x, ./images/emloyer-desktop-@2x-001.webp 2x"
                                 media="(min-width: 1200px)" type="image/webp" >
                             <source srcset="./images/emloyer-desktop-001.jpg 1x, ./images/emloyer-desktop-@2x-001.jpg 2x"
-                                media="(min-width: 1200px)" >
+                                media="(min-width: 1200px)" type="image/jpg" >
                             <source srcset="./images/emloyer-tablet-001.webp 1x, ./images/emloyer-tablet-@2x-001.webp 2x"
                                 media="(min-width: 768px)" type="image/webp" >
                             <source srcset="./images/emloyer-tablet-001.jpg 1x, ./images/emloyer-tablet-@2x-001.jpg 2x"
-                                media="(min-width: 768px)" >
+                                media="(min-width: 768px)" type="image/jpg" >
                             <source srcset="./images/emloyer-mobile-001.webp 1x, ./images/emloyer-mobile-@2x-001.webp 2x"
                                 media="(max-width: 767px)" type="image/webp" >
                             <source srcset="./images/emloyer-mobile-001.jpg 1x, ./images/emloyer-mobile-@2x-001.jpg 2x"
-                                media="(max-width: 767px)" >
+                                media="(max-width: 767px)" type="image/jpg" >
                             <img src="./images/emloyer-mobile-001.jpg" alt="команда">
                         </picture>
                         <div class="about-team__text">
@@ -248,15 +248,15 @@
                             <source srcset="./images/emloyer-desktop-002.webp 1x, ./images/emloyer-desktop-@2x-002.webp 2x"
                                 media="(min-width: 1200px)" type="image/webp" >
                             <source srcset="./images/emloyer-desktop-002.jpg 1x, ./images/emloyer-desktop-@2x-002.jpg 2x"
-                                media="(min-width: 1200px)" >
+                                media="(min-width: 1200px)" type="image/jpg" >
                             <source srcset="./images/emloyer-tablet-002.webp 1x, ./images/emloyer-tablet-@2x-002.webp 2x"
                                 media="(min-width: 768px)" type="image/webp" >
                             <source srcset="./images/emloyer-tablet-002.jpg 1x, ./images/emloyer-tablet-@2x-002.jpg 2x"
-                                media="(min-width: 768px)" >
+                                media="(min-width: 768px)" type="image/jpg" >
                             <source srcset="./images/emloyer-mobile-002.webp 1x, ./images/emloyer-mobile-@2x-002.webp 2x"
                                 media="(max-width: 767px)" type="image/webp" >
                             <source srcset="./images/emloyer-mobile-002.jpg 1x, ./images/emloyer-mobile-@2x-002.jpg 2x"
-                                media="(max-width: 767px)" >
+                                media="(max-width: 767px)" type="image/jpg" >
                             <img src="./images/emloyer-mobile-002.jpg" alt="команда">
                         </picture>
                         <div class="about-team__text">
@@ -299,15 +299,15 @@
                             <source srcset="./images/emloyer-desktop-003.webp 1x, ./images/emloyer-desktop-@2x-003.webp 2x"
                                 media="(min-width: 1200px)" type="image/webp" >
                             <source srcset="./images/emloyer-desktop-003.jpg 1x, ./images/emloyer-desktop-@2x-003.jpg 2x"
-                                media="(min-width: 1200px)" >
+                                media="(min-width: 1200px)" type="image/jpg" >
                             <source srcset="./images/emloyer-tablet-003.webp 1x, ./images/emloyer-tablet-@2x-003.webp 2x"
                                 media="(min-width: 768px)" type="image/webp" >
                             <source srcset="./images/emloyer-tablet-003.jpg 1x, ./images/emloyer-tablet-@2x-003.jpg 2x"
-                                media="(min-width: 768px)" >
+                                media="(min-width: 768px)" type="image/jpg" >
                             <source srcset="./images/emloyer-mobile-003.webp 1x, ./images/emloyer-mobile-@2x-003.webp 2x"
                                 media="(max-width: 767px)" type="image/webp" >
                             <source srcset="./images/emloyer-mobile-003.jpg 1x, ./images/emloyer-mobile-@2x-003.jpg 2x"
-                                media="(max-width: 767px)" >
+                                media="(max-width: 767px)" type="image/jpg" >
                             <img src="./images/emloyer-mobile-003.jpg" alt="команда">
                         </picture>
                         <div class="about-team__text">
@@ -350,15 +350,15 @@
                             <source srcset="./images/emloyer-desktop-004.webp 1x, ./images/emloyer-desktop-@2x-004.webp 2x"
                                 media="(min-width: 1200px)" type="image/webp" >
                             <source srcset="./images/emloyer-desktop-004.jpg 1x, ./images/emloyer-desktop-@2x-004.jpg 2x"
-                                media="(min-width: 1200px)" >
+                                media="(min-width: 1200px)" type="image/jpg" >
                             <source srcset="./images/emloyer-tablet-004.webp 1x, ./images/emloyer-tablet-@2x-004.webp 2x"
                                 media="(min-width: 768px)" type="image/webp" >
                             <source srcset="./images/emloyer-tablet-004.jpg 1x, ./images/emloyer-tablet-@2x-004.jpg 2x"
-                                media="(min-width: 768px)" >
+                                media="(min-width: 768px)" type="image/jpg" >
                             <source srcset="./images/emloyer-mobile-004.webp 1x, ./images/emloyer-mobile-@2x-004.webp 2x"
                                 media="(max-width: 767px)" type="image/webp" >
                             <source srcset="./images/emloyer-mobile-004.jpg 1x, ./images/emloyer-mobile-@2x-004.jpg 2x"
-                                media="(max-width: 767px)" >
+                                media="(max-width: 767px)" type="image/jpg" >
                             <img src="./images/emloyer-mobile-004.jpg" alt="команда">
                         </picture>
                         <div class="about-team__text">
