--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,11 @@
                     </li>
                 </ul>
             </nav>
+            <button type="button" class="mobile-menu-btn" data-menu-open>
+                <svg class="mobile-menu-btn__icon" width="24" height="16">
+                    <use href="./images/sprite.svg#icon-menu-burger"></use>
+                </svg>
+            </button>
             <ul class="contacts-list list">
                 <li class="contact-list__item">
                     <a class="contact-list__information link" href="mailto:info@devstudio.com">
@@ -35,17 +40,63 @@
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
-                    </a>
+                </a>
                 </li>
                 <li class="contact-list__item">
                     <a class="contact-list__information link" href="tel:+380961111111">
                         <svg class="contact-item" width="10" height="16">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
-                        </svg>
+                    </svg>
                         +38 096 111 11 11
                     </a>
                 </li>
             </ul>
+        </div>
+        <!-- Mobile menu -->
+        <div class="mobile-menu" data-menu>
+            <div class="container mobile-menu-container">
+                <button type="button" class="mobile-menu__close-btn" data-menu-close>
+                    <svg class="mobile-menu__close-icon" width="18" height="18">
+                        <use href="./images/sprite.svg#close-icon-2"></use>
+                    </svg>
+                </button>
+                <ul class="mobile-menu__navigation">
+                    <li class="mobile-menu__nav-list list">
+                        <a class="mobile-menu__nav-item mobile-menu__nav-item--accent link" href="#">Студія</a>
+                    </li>
+                    <li class="mobile-menu__nav-list list">
+                        <a class="mobile-menu__nav-item link" href="portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="mobile-menu__nav-list list">
+                        <a class="mobile-menu__nav-item link" href="#address">Контакти</a>
+                    </li>
+                </ul>
+                <ul class="mobile-menu__contacts">
+                    <li class="mobile-menu__contact-list list">
+                        <a class="mobile-menu__contact-mail link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                    <li class="mobile-menu__contact-list list">
+                        <a class="mobile-menu__contact-tel link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mobile-menu__links">
+                    <li class="mobile-menu__social-link list">
+                        <a class="mobile-menu__link link" href="#">Instagram</a>
+                        <span class="mobile-menu__line">|</span>
+                    </li>
+                    <li class="mobile-menu__social-link list">
+                        <a class="mobile-menu__link link" href="#">Twitter</a>
+                        <span class="mobile-menu__line">|</span>
+                    </li>
+                    <li class="mobile-menu__social-link list">
+                        <a class="mobile-menu__link link" href="#">Facebook</a>
+                        <span class="mobile-menu__line">|</span>
+                    </li>
+                    <li class="mobile-menu__social-link list">
+                        <a class="mobile-menu__link link" href="#">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
@@ -69,15 +120,15 @@
                                     <source srcset="./images/project-desktop-001.webp 1x, ./images/project-desktop-@2x-001.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-001.jpg 1x, ./images/project-desktop-@2x-001.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-001.webp 1x, ./images/project-tablet-@2x-001.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-001.jpg 1x, ./images/project-tablet-@2x-001.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-001.webp 1x, ./images/project-mobile-@2x-001.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-001.jpg 1x, ./images/project-mobile-@2x-001.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-001.jpg" alt="фото проекту">
                                 </picture>
                                 <div class="project-overlay">
@@ -98,15 +149,15 @@
                                     <source srcset="./images/project-desktop-002.webp 1x, ./images/project-desktop-@2x-002.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-002.jpg 1x, ./images/project-desktop-@2x-002.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-002.webp 1x, ./images/project-tablet-@2x-002.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-002.jpg 1x, ./images/project-tablet-@2x-002.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-002.webp 1x, ./images/project-mobile-@2x-002.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-002.jpg 1x, ./images/project-mobile-@2x-002.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-002.jpg" alt="фото проекту">
                                 </picture>
                                 <div class="project-overlay">
@@ -128,15 +179,15 @@
                                     <source srcset="./images/project-desktop-003.webp 1x, ./images/project-desktop-@2x-003.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-003.jpg 1x, ./images/project-desktop-@2x-003.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-003.webp 1x, ./images/project-tablet-@2x-003.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-003.jpg 1x, ./images/project-tablet-@2x-003.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-003.webp 1x, ./images/project-mobile-@2x-003.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-003.jpg 1x, ./images/project-mobile-@2x-003.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-003.jpg" alt="фото проекту">
                                 </picture>                                
                                 <div class="project-overlay">
@@ -158,15 +209,15 @@
                                     <source srcset="./images/project-desktop-004.webp 1x, ./images/project-desktop-@2x-004.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-004.jpg 1x, ./images/project-desktop-@2x-004.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-004.webp 1x, ./images/project-tablet-@2x-004.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-004.jpg 1x, ./images/project-tablet-@2x-004.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-004.webp 1x, ./images/project-mobile-@2x-004.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-004.jpg 1x, ./images/project-mobile-@2x-004.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-004.jpg" alt="фото проекту">
                                 </picture>
                                 <div class="project-overlay">
@@ -188,15 +239,15 @@
                                     <source srcset="./images/project-desktop-005.webp 1x, ./images/project-desktop-@2x-005.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-005.jpg 1x, ./images/project-desktop-@2x-005.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-005.webp 1x, ./images/project-tablet-@2x-005.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-005.jpg 1x, ./images/project-tablet-@2x-005.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-005.webp 1x, ./images/project-mobile-@2x-005.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-005.jpg 1x, ./images/project-mobile-@2x-005.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-005.jpg" alt="фото проекту">
                                 </picture>
                                 <div class="project-overlay">
@@ -218,15 +269,15 @@
                                     <source srcset="./images/project-desktop-006.webp 1x, ./images/project-desktop-@2x-006.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-006.jpg 1x, ./images/project-desktop-@2x-006.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-006.webp 1x, ./images/project-tablet-@2x-006.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-006.jpg 1x, ./images/project-tablet-@2x-006.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-006.webp 1x, ./images/project-mobile-@2x-006.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-006.jpg 1x, ./images/project-mobile-@2x-006.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-006.jpg" alt="фото проекту">
                                 </picture>
                                 <div class="project-overlay">
@@ -248,15 +299,15 @@
                                     <source srcset="./images/project-desktop-007.webp 1x, ./images/project-desktop-@2x-007.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-007.jpg 1x, ./images/project-desktop-@2x-007.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-007.webp 1x, ./images/project-tablet-@2x-007.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-007.jpg 1x, ./images/project-tablet-@2x-007.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-007.webp 1x, ./images/project-mobile-@2x-007.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-007.jpg 1x, ./images/project-mobile-@2x-007.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-007.jpg" alt="фото проекту">
                                 </picture>
                                 <div class="project-overlay">
@@ -278,15 +329,15 @@
                                     <source srcset="./images/project-desktop-008.webp 1x, ./images/project-desktop-@2x-008.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-008.jpg 1x, ./images/project-desktop-@2x-008.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-008.webp 1x, ./images/project-tablet-@2x-008.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-008.jpg 1x, ./images/project-tablet-@2x-008.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-008.webp 1x, ./images/project-mobile-@2x-008.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-008.jpg 1x, ./images/project-mobile-@2x-008.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-008.jpg" alt="фото проекту">
                                 </picture>
                                 <div class="project-overlay">
@@ -308,15 +359,15 @@
                                     <source srcset="./images/project-desktop-009.webp 1x, ./images/project-desktop-@2x-009.webp 2x"
                                         media="(min-width: 1200px)" type="image/webp" >
                                     <source srcset="./images/project-desktop-009.jpg 1x, ./images/project-desktop-@2x-009.jpg 2x"
-                                        media="(min-width: 1200px)" >
+                                        media="(min-width: 1200px)" type="image/jpg" >
                                     <source srcset="./images/project-tablet-009.webp 1x, ./images/project-tablet-@2x-009.webp 2x"
                                         media="(min-width: 768px)" type="image/webp" >
                                     <source srcset="./images/project-tablet-009.jpg 1x, ./images/project-tablet-@2x-009.jpg 2x"
-                                        media="(min-width: 768px)" >
+                                        media="(min-width: 768px)" type="image/jpg" >
                                     <source srcset="./images/project-mobile-009.webp 1x, ./images/project-mobile-@2x-009.webp 2x"
                                         media="(max-width: 767px)" type="image/webp" >
                                     <source srcset="./images/project-mobile-009.jpg 1x, ./images/project-mobile-@2x-009.jpg 2x"
-                                        media="(max-width: 767px)" >
+                                        media="(max-width: 767px)" type="image/jpg" >
                                     <img src="./images/project-mobile-009.jpg" alt="фото проекту">
                                 </picture>
                                 <div class="project-overlay">
@@ -394,5 +445,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
