--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <button class="subscription-form-submit-btn" type="submit">
                         <span class="subscription-form-text">Підписатися
                             <svg class="subscription-icon" width="32" height="32">
-                                <use href="/images/sprite.svg#icon-icon-send"></use>
+                                <use href="./images/sprite.svg#icon-icon-send"></use>
                             </svg>
                         </span>                
                     </button>
